--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">mamawaestate</string>
+    <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
 </resources>
