--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">mamawaestate</string>
+
+
+    <string name="not_found">Not Found!</string>
+    <string name="search">Search Menu</string>
 </resources>
