--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,9 @@
     <string name="registration">Registration</string>
     <string name="select_what_you_own">select_what_you_own</string>
     <string name="select_shop">select_shop</string>
+    <string name="register">Register</string>
+    <string name="locationpin">locationpin</string>
+    <string name="your_phone">yourphone no</string>
+    <string name="reg_once">reg_once</string>
 
 </resources>
