--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,16 @@
 <resources>
     <string name="app_name">mamawaestate</string>
-
     <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
-
-
     <string name="not_found">Not Found!</string>
     <string name="search">Search Menu</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <string name="drawer_open">open</string>
     <string name="drawer_close">close</string>
-<<<<<<< HEAD
-    <string name="registration">Registration</string>
-    <string name="select_what_you_own">select_what_you_own</string>
-    <string name="select_shop">select_shop</string>
-    <string name="register">Register</string>
-    <string name="locationpin">locationpin</string>
-    <string name="your_phone">yourphone no</string>
-    <string name="reg_once">reg_once</string>
+   <string name="regisration">Registration</string>
+
     <string name="product_name">product_name</string>
-=======
-    <string name="registration">registration</string>
+
+    <string name="registration">Registration</string>
     <string name="select_what_you_own">select_what_you_own</string>
     <string name="Electronic_stor">Electronic_store</string>
     <string name="grocery_store">grocery_store</string>
@@ -30,6 +19,6 @@
     <string name="reg_once">Registration can be done only once, so please enter the correct credentials</string>
     <string name="your_phone">your_phone number</string>
     <string name="locationpin">location</string>
->>>>>>> 107fdcc2ccafe0573a88f0a93b507bf94ba9e893
+
 
 </resources>
